.metadata/.plugins/org.eclipse.cdt.ui/health_care.build.log
18:15:01 **** Incremental Build of configuration Debug for project health_care ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F429xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'MX_GPIO_Init':
../Core/Src/main.c:798:41: error: 'RC522_RST_Pin' undeclared (first use in this function); did you mean 'RC522_CS_Pin'?
  798 |   HAL_GPIO_WritePin(GPIOB, RC522_CS_Pin|RC522_RST_Pin|ILI9341_DC_Pin|ILI9341_RESET_Pin|HX711_SCK_Pin, GPIO_PIN_RESET);
      |                                         ^~~~~~~~~~~~~
      |                                         RC522_CS_Pin
../Core/Src/main.c:798:41: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Core/Src/subdir.mk:43: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

18:15:01 Build Failed. 2 errors, 0 warnings. (took 366ms)

